<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:id="@+id/al_main_activity_app_bar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            app:navigationIcon="@drawable/ic_arrow_left_white"
            app:titleTextColor="@color/white"
            app:title="@string/title_about"
            android:background="@color/colorAccent"
            android:id="@+id/tb_main_activity_toolbar"
            android:layout_height="?android:actionBarSize" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"

            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:padding="16dp"
                android:background="@drawable/arc_shape_right"
                android:layout_height="330dp">

                <androidx.cardview.widget.CardView
                    app:cardCornerRadius="125dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="250dp"
                    android:layout_height="250dp">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="match_parent"
                            android:id="@+id/iv_app_img"
                            android:layout_margin="16dp"
                            android:layout_height="match_parent" />
                    </FrameLayout>
                </androidx.cardview.widget.CardView>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    style="@style/TextViewCustomStyle"
                    android:gravity="center"
                    android:textSize="30sp"
                    android:textColor="@color/white"
                    android:text="@string/app_name"
                    android:layout_height="wrap_content" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content">

                <androidx.cardview.widget.CardView

                    app:cardCornerRadius="4dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:id="@+id/cv_rate_use"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        style="@style/TextViewCustomStyle"
                        android:textColor="@color/colorAccent"
                        android:gravity="center_horizontal"
                        android:text="@string/rate_use"
                        android:layout_height="wrap_content" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView

                    app:cardCornerRadius="4dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:id="@+id/cv_share"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        style="@style/TextViewCustomStyle"
                        android:textColor="@color/colorAccent"
                        android:gravity="center_horizontal"
                        android:text="@string/share"
                        android:layout_height="wrap_content" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView

                    app:cardCornerRadius="4dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:id="@+id/cv_more_apps"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        style="@style/TextViewCustomStyle"
                        android:textColor="@color/colorAccent"
                        android:gravity="center_horizontal"
                        android:text="@string/more_apps"
                        android:layout_height="wrap_content" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView

                    app:cardCornerRadius="4dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:id="@+id/cv_private_politic"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        style="@style/TextViewCustomStyle"
                        android:textColor="@color/colorAccent"
                        android:gravity="center_horizontal"
                        android:text="@string/private_politic"
                        android:layout_height="wrap_content" />
                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
</LinearLayout>